lab6-accessing-interacting-minikube/deny-all-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: default
spec:
  # Selects all pods in the namespace
  podSelector: {}

  # Denies all incoming and outgoing traffic
  policyTypes:
  - Ingress
  - Egress
